--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="assets/pizzas.js"></script>
+    <script type="text/javascript" src="assets/js/pizzas.js"></script>
     <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
